package protobuf;

option go_package = "protobuf/";

message AppendEntryResponse {
  required bool Success = 1;
  required uint64 Term = 2;
  optional uint64 LogIndexError = 3;
}
